@@ -16,6 +16,7 @@
 
 #include "text.hpp"
 
+#include "gettext.hpp"
 #include "gui/widgets/helper.hpp"
 #include "gui/auxiliary/log.hpp"
 #include "font.hpp"
@@ -264,6 +265,12 @@ bool ttext::set_text(const std::string& text, const bool markedup)
 			if(!pango_parse_markup(text.c_str(), text.size()
 						, 0, NULL, NULL, NULL, NULL)) {
 
+				ERR_GUI_L << "ttext::" << __func__
+						<< " text '" << text
+						<< "' has broken markup, set to normal text.\n";
+				/** @todo Enable after 1.8. */
+//				set_text(_("The text contains invalid markup: ") + text, false);
+				set_text(text, false);
 				return false;
 			}
 			pango_layout_set_markup(layout_, text.c_str(), text.size());
